Story and feed mostly working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
 
     <string name="sampleAlias">"@UserAlias"</string>
     <string name="sampleUserName">The User</string>
+    <string name="sampleDate">February 14</string>
+    <string name="sampleStatus">This is a sample status. </string>
 </resources>
