--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,7 @@
     <string name="menu_profile">Go to Profile</string>
     <string name="menu_login">Login</string>
     <string name="menu_logout">Logout</string>
+
+    <string name="search">Search</string>
+    <string name="search_term">Search by Alias</string>
 </resources>
