--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="sampleDate">February 14</string>
     <string name="sampleStatus">This is a sample status. </string>
 
+    <string name="mustLogIn">You must sign in to write a status</string>
     <string name="statusPlaceholder">"What's on your mind?"</string>
     <string name="share">Share</string>
 
@@ -41,6 +42,7 @@
     <string name="menu_profile">Go to Profile</string>
     <string name="menu_login">Login</string>
     <string name="menu_logout">Logout</string>
+    <string name="mustLogInProfile">You must sign in to view your profile</string>
 
     <string name="search">Search</string>
     <string name="search_term">Search by Alias</string>
